--- a/app/src/main/res/layout/activity_ahorcado.xml
+++ b/app/src/main/res/layout/activity_ahorcado.xml
@@ -19,9 +19,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jola"
+        android:text="New Text"
         android:id="@+id/textView2"
-        android:layout_above="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="82dp" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="95dp" />
+
 </RelativeLayout>
