--- a/app/src/main/res/layout/activity_ahorcado.xml
+++ b/app/src/main/res/layout/activity_ahorcado.xml
@@ -26,4 +26,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="95dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="jijiji"
+        android:id="@+id/textView3"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
